--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 # Ignore all files in a directory
 ./intermediary_files
+./intermediary_files/final_AQI.csv
+./intermediary_files/particulate_aqi_temp.json
+./intermediary_files/gaseous_aqi_temp.json
